--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -455,6 +455,7 @@ content: "";
 
 
 .card-text{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 1px;
     font-size: 1rem;
     font-weight: 600;
