--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -432,7 +432,10 @@ transform: translateY(-2px);
     background-color:var(--primary-color);
 }
 
-
+.subtitulo-cartas-cuerpo{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+}
 
 .nombre::after{
 content: "";
@@ -458,7 +461,7 @@ content: "";
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 1px;
     font-size: 1rem;
-    font-weight: 600;
+    
 }
 
 
