--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -448,7 +448,7 @@ content: "";
 
 .nombre{
     font-size: 1.3rem;
-    font-family: var(--font-main);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight:600;
 }
 
