--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -475,7 +475,7 @@ content: "";
 
 .titulo-principal{
     letter-spacing: 2px;
-  
+    font-weight:500;
     font-family: 'Montserrat', sans-serif;
    
    
