--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -469,6 +469,7 @@ content: "";
   display: none;
   margin-top: 10px;
   font-size: 0.9rem;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
