--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -448,7 +448,7 @@ content: "";
 
 .nombre{
     font-size: 1.3rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-main);
     font-weight:600;
 }
 
@@ -476,7 +476,7 @@ content: "";
 
 .titulo-principal{
     letter-spacing: 2px;
-    font-weight:500;
+    font-weight:600;
     font-family: 'Montserrat', sans-serif;
    
    
