--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -474,6 +474,7 @@ content: "";
     letter-spacing: 2px;
     font-weight:600;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1rem:
    
    
    
