--- a/css-GIS/estilosIntegrantes.css
+++ b/css-GIS/estilosIntegrantes.css
@@ -512,6 +512,7 @@ content: "";
 .subtitulo-cartas-cuerpo{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
+   font-size: 1rem:
 }
 
 .nombre{
