--- a/css-GIS/Styleheader.css
+++ b/css-GIS/Styleheader.css
@@ -41,6 +41,7 @@ html{
 }
 /* Navbar general */
 nav.bg-is {
+  background-color: var(--blanco-fondo);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: background-color 0.3s ease;
 }
@@ -80,6 +81,7 @@ nav.bg-is .nav-link:hover::after {
   height: 100%;
   margin: 3px;
 }
+
 
 
 
